--- a/en/how_to_build_2.html
+++ b/en/how_to_build_2.html
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/en/how_to_build_2.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld//en/how_to_build_2.html">
 </head>
 
 
