--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/">
+    <link rel="canonical" href="http://coderbot.org/helloworld//">
 </head>
 
   <body>
