--- a/it/blog-post.html
+++ b/it/blog-post.html
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/it/blog-post.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld//it/blog-post.html">
 </head>
 
 
