--- a/en/about.html
+++ b/en/about.html
@@ -12,16 +12,16 @@
     <title>CoderBot - An open, programmable robot</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="//helloworld//css/bootstrap.min.css" rel="stylesheet">
+    <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="//helloworld//css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="//helloworld//css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
     <!-- jQuery Version 1.11.0 -->
-    <script src="//helloworld//js/jquery-1.11.0.js"></script>
+    <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/helloworld//en/about.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld/en/about.html">
 </head>
 
 
@@ -126,7 +126,8 @@
 
             <div class="col-md-12">
                 <h3>Che cos'è</h2>
-                <p>CoderBot è un robot orientato alla didattica basato su Raspberry PI.</p>
+                <p>CoderBot è un robot orientato alla didattica ed è rivolto a bambini dai 6 anni in avanti.</p>
+                <p>E basato sul computer Raspberry Pi ed è costruito in massima parte sulla base di componenti economici e facilmente reperibili sul mercato.</p>
                 <p>E' un veicolo con due ruote motrici anteriori indipendenti e un terzo punto di appoggio posteriore costituito da una sfera libera.</p>
                 <p>E' controllabile via web tramite un pc, un tablet o uno smartphone che sia in grado di connettersi via wifi al robot.</p>
                 <p>CoderBot può essere utilizzato come un "rover" teleguidato, grazie alla telecamera integrata trasmette le immagini dell'ambiente che gli si trova davanti.</p>
