--- a/en/index.html
+++ b/en/index.html
@@ -12,16 +12,16 @@
     <title>CoderBot - An open, programmable robot</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="//helloworld//css/bootstrap.min.css" rel="stylesheet">
+    <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="//helloworld//css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="//helloworld//css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
     <!-- jQuery Version 1.11.0 -->
-    <script src="//helloworld//js/jquery-1.11.0.js"></script>
+    <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/helloworld//en/">
+    <link rel="canonical" href="http://coderbot.org/helloworld/en/">
 </head>
 
 
@@ -130,7 +130,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Libero e Open source</h4>
+                        <h4><i class="fa fa-fw fa-folder-open"></i> Libero e Open source</h4>
                     </div>
                     <div class="panel-body">
                         <p class="desc-over">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
@@ -181,7 +181,7 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-expand"></i> Estendibile</h4>
+                        <h4><i class="fa fa-fw fa-fullscreen"></i> Estendibile</h4>
                     </div>
                     <div class="panel-body">
                         <p class="desc-over">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
