--- a/en/blog-home-1.html
+++ b/en/blog-home-1.html
@@ -12,16 +12,16 @@
     <title>CoderBot - An open, programmable robot</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="//helloworld//css/bootstrap.min.css" rel="stylesheet">
+    <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="//helloworld//css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="//helloworld//css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
     <!-- jQuery Version 1.11.0 -->
-    <script src="//helloworld//js/jquery-1.11.0.js"></script>
+    <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/helloworld//en/blog-home-1.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld/en/blog-home-1.html">
 </head>
 
 
@@ -91,13 +91,13 @@
               <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Blog Home One
-                    <small>Subheading</small>
+                <h1 class="page-header">News
+                    <small>Novità sul progetto CoderBot</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html">CoderBot</a>
                     </li>
-                    <li class="active">Blog Home One</li>
+                    <li class="active">News</li>
                 </ol>
             </div>
         </div>
