--- a/en/blog-post.html
+++ b/en/blog-post.html
@@ -12,16 +12,16 @@
     <title>CoderBot - An open, programmable robot</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="//helloworld//css/bootstrap.min.css" rel="stylesheet">
+    <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="//helloworld//css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="//helloworld//css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     
     <!-- jQuery Version 1.11.0 -->
-    <script src="//helloworld//js/jquery-1.11.0.js"></script>
+    <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/helloworld//en/blog-post.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld/en/blog-post.html">
 </head>
 
 
