--- a/en/how_to_build_mh.html
+++ b/en/how_to_build_mh.html
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/helloworld/it/how_to_build_2.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld/en/how_to_build_mh.html">
 </head>
 
 
@@ -45,39 +45,39 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Navigazione</span>
+                    <span class="sr-only">Navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/en/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Cosa è</a>
+                        <a href="/helloworld/en/about.html">About</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Come costruirlo</a>
+                        <a href="/helloworld/en/how_to_build_it.html">Make</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Gioca</a>
+                        <a href="/helloworld/en/prj_fun.html">Play</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Impara</a>
+                        <a href="/helloworld/en/prj_learn.html">Learn</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contatti</a>
+                        <a href="/helloworld/en/contact.html">Contacts</a>
                     </li>
                     <li>
-                        <a href="https://groups.google.com/forum/#!forum/coderbot-users">Forum</a>
+                        <a href="/helloworld/en/forum.html">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/en/blog-home-1.html">News</a>
                     </li>
                     <li>
-                        <a href="../en/index.html">English</a>
+                        <a href="/helloworld/it/index.html">Italian</a>
                     </li>
                 </ul>
             </div>
@@ -91,7 +91,7 @@
                 <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Parte 2 - Telaio e motori
+                <h1 class="page-header">Telaio e motori
                     <small>Vari modelli per varie esigenze.</small>
                 </h1>
                 <ol class="breadcrumb">
@@ -161,12 +161,6 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
 
 </html>
