--- a/en/prj_learn_1.html
+++ b/en/prj_learn_1.html
@@ -50,34 +50,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/en/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/helloworld/en/about.html">About</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Make</a>
+                        <a href="/helloworld/en/how_to_build_it.html">Make</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Play</a>
+                        <a href="/helloworld/en/prj_fun.html">Play</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Learn</a>
+                        <a href="/helloworld/en/prj_learn.html">Learn</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contacts</a>
+                        <a href="/helloworld/en/contact.html">Contacts</a>
                     </li>
                     <li>
-                        <a href="forum.html">Forum</a>
+                        <a href="/helloworld/en/forum.html">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/en/blog-home-1.html">News</a>
                     </li>
                     <li>
-                        <a href="../it/index.html">Italian</a>
+                        <a href="/helloworld/it/index.html">Italian</a>
                     </li>
                 </ul>
             </div>
@@ -201,12 +201,6 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
 
 </html>
