--- a/it/how_to_build_hw.html
+++ b/it/how_to_build_hw.html
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="canonical" href="http://coderbot.org/helloworld/it/how_to_build_1.html">
+    <link rel="canonical" href="http://coderbot.org/helloworld/it/how_to_build_hw.html">
 </head>
 
 
@@ -50,34 +50,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/it/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Cosa è</a>
+                        <a href="/helloworld/it/about.html">Cosa è</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Come costruirlo</a>
+                        <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Gioca</a>
+                        <a href="/helloworld/it/prj_fun.html">Gioca</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Impara</a>
+                        <a href="/helloworld/it/prj_learn.html">Impara</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contatti</a>
+                        <a href="/helloworld/it/contact.html">Contatti</a>
                     </li>
                     <li>
                         <a href="https://groups.google.com/forum/#!forum/coderbot-users">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/it/blog-home-1.html">Novità</a>
                     </li>
                     <li>
-                        <a href="../en/index.html">English</a>
+                        <a href="/helloworld/en/index.html">English</a>
                     </li>
                 </ul>
             </div>
@@ -91,8 +91,8 @@
                 <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Parte 1 - Hardware
-                    <small>Raspberry Pi, Camera e scheda di controllo.</small>
+                <h1 class="page-header">Hardware
+                    <small>Raspberry Pi, controllo motori, batteria</small>
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">CoderBot</a></li>
@@ -161,12 +161,5 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
-
 </html>
