--- a/it/how_to_build_it.html
+++ b/it/how_to_build_it.html
@@ -50,34 +50,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/it/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Cosa è</a>
+                        <a href="/helloworld/it/about.html">Cosa è</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Come costruirlo</a>
+                        <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Gioca</a>
+                        <a href="/helloworld/it/prj_fun.html">Gioca</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Impara</a>
+                        <a href="/helloworld/it/prj_learn.html">Impara</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contatti</a>
+                        <a href="/helloworld/it/contact.html">Contatti</a>
                     </li>
                     <li>
                         <a href="https://groups.google.com/forum/#!forum/coderbot-users">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/it/blog-home-1.html">Novità</a>
                     </li>
                     <li>
-                        <a href="../en/index.html">English</a>
+                        <a href="/helloworld/en/index.html">English</a>
                     </li>
                 </ul>
             </div>
@@ -103,36 +103,34 @@
         </div>
         <!-- /.row -->
 
-        <!-- Project One -->
+        <!-- row -->
         <div class="row">
             <div class="col-md-7">
-                <a href="how_to_build_1.html">
+                <a href="how_to_build_mh.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Parte 1 - Hardware (elettronica)</h3>
-                <h4>Raspberry Pi e scheda di controllo</h4>
-                <p>CoderBot è basato su Raspberry Pi, il modulo Camera e una scheda per controllare i motori.</p>
-                <a class="btn btn-primary" href="how_to_build_1.html">Guarda i dettagli</i></a>
+                <a class="" href="how_to_build_mh.html"><h3>Telaio e motori</h3></a>
+                <h4>Ne esistono varie versioni, scegli quella più adatta alle tue esigenze.</h4>
+                <p>CoderBot è stato realizzato in varie versioni, per materiali diversi: legno, plexiglass, cartone, e motori: dc e servo.</p>
             </div>
         </div>
         <!-- /.row -->
 
         <hr>
 
-        <!-- Project Two -->
+        <!-- row -->
         <div class="row">
             <div class="col-md-7">
-                <a href="how_to_build_2.html">
+                <a href="how_to_build_hw.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Parte 2 - Telaio e motori</h3>
-                <h4>Ne esistono varie versioni, scegli quella più adatta alle tue esigenze.</h4>
-                <p>CoderBot è stato realizzato in varie versioni, per materiali diversi: legno, plexiglass, cartone, e motori: dc e servo.</p>
-                <a class="btn btn-primary" href="how_to_build_2.html">Guarda i dettagli</i></a>
+                <a class="" href="how_to_build_hw.html"><h3>Hardware (elettronica)</h3></a>
+                <h4>Raspberry Pi e scheda di controllo</h4>
+                <p>CoderBot è basato su Raspberry Pi, il modulo Camera e una scheda per controllare i motori.</p>
             </div>
         </div>
         <!-- /.row -->
@@ -142,15 +140,14 @@
         <!-- Project Three -->
         <div class="row">
             <div class="col-md-7">
-                <a href="how_to_build_3.html">
+                <a href="how_to_build_sw.html">
                     <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Parte 3 - Software</h3>
+                <a class="" href="how_to_build_sw.html"><h3>Software</h3></<>
                 <h4>La parte software di CoderBot è composta da diverse librerie e moduli, ecco come installare il tutto.</h4>
                 <p>Puoi partire da una distribuzione Raspbian standard e installare le singole componenti, oppure scaricare un'immagine completa già configurata.</p>
-                <a class="btn btn-primary" href="how_to_build_3.html">Guarda i dettagli</i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -170,12 +167,5 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
-
 </html>
