--- a/en/about.html
+++ b/en/about.html
@@ -50,34 +50,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/en/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/helloworld/en/about.html">About</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Make</a>
+                        <a href="/helloworld/en/how_to_build_it.html">Make</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Play</a>
+                        <a href="/helloworld/en/prj_fun.html">Play</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Learn</a>
+                        <a href="/helloworld/en/prj_learn.html">Learn</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contacts</a>
+                        <a href="/helloworld/en/contact.html">Contacts</a>
                     </li>
                     <li>
-                        <a href="forum.html">Forum</a>
+                        <a href="/helloworld/en/forum.html">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/en/blog-home-1.html">News</a>
                     </li>
                     <li>
-                        <a href="../it/index.html">Italian</a>
+                        <a href="/helloworld/it/index.html">Italian</a>
                     </li>
                 </ul>
             </div>
@@ -129,14 +129,14 @@
                 <p>CoderBot è un robot orientato alla didattica ed è rivolto a bambini dai 6 anni in avanti.</p>
                 <p>E basato sul computer Raspberry Pi ed è costruito in massima parte sulla base di componenti economici e facilmente reperibili sul mercato.</p>
                 <p>E' un veicolo con due ruote motrici anteriori indipendenti e un terzo punto di appoggio posteriore costituito da una sfera libera.</p>
-                <p>E' controllabile via web tramite un pc, un tablet o uno smartphone che sia in grado di connettersi via wifi al robot.</p>
-                <p>CoderBot può essere utilizzato come un "rover" teleguidato, grazie alla telecamera integrata trasmette le immagini dell'ambiente che gli si trova davanti.</p>
+                <p>E' controllabile da remoto tramite un pc, un tablet o uno smartphone che sia in grado di connettersi via wifi al robot.</p>
+                <p>CoderBot può essere utilizzato sia come un "rover" teleguidato, grazie alla telecamera integrata trasmette le immagini dell'ambiente che gli si trova davanti.</p>
                 <p>CoderBot è inoltre programmabile tramite un linguaggio a blocchi (blockly) specifico per bambini dai 6 anni in avanti.</p>
                 <p>L'editor è configurabile in vari livelli di complessità e completezza delle istruzioni, in modo da poter facilitare l'apprendimento per gradi.</p>
                 <p>Per i più avanzati, CoderBot è inoltre programmabile direttamente in python, utilizzando delle librerie molto semplici ed intuitive.</p>
                 <h3>Cosa può fare</h3>
-                <p>Il robot è in grado di muoversi avanti e indietro e ruotare sul posto o curvare con raggi definibili.</p>
-				<p>Grazie alla Camera è in grado di riprendere immagini e trasmetterle al "pilota", oppure può utilizzare le immagini per riconoscere oggetti in base al colore oppure alla forma.</p>
+                <p>Il robot è in grado di muoversi avanti e indietro e ruotare sul posto o percorrere curve con raggi variabili.</p>
+				<p>Grazie alla Camera a bordo è in grado di riprendere immagini e trasmetterle alla consolle di comando, oppure può analizzare le immagini per riconoscere oggetti in base al colore oppure alla forma.</p>
 				<p>E' anche in grado di riconoscere visi di persone e simboli predefiniti.</p>
             </div>
 
@@ -156,12 +156,6 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
 
 </html>
