--- a/en/blog-post.html
+++ b/en/blog-post.html
@@ -50,34 +50,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/en/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/helloworld/en/about.html">About</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Make</a>
+                        <a href="/helloworld/en/how_to_build_it.html">Make</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Play</a>
+                        <a href="/helloworld/en/prj_fun.html">Play</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Learn</a>
+                        <a href="/helloworld/en/prj_learn.html">Learn</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contacts</a>
+                        <a href="/helloworld/en/contact.html">Contacts</a>
                     </li>
                     <li>
-                        <a href="forum.html">Forum</a>
+                        <a href="/helloworld/en/forum.html">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/en/blog-home-1.html">News</a>
                     </li>
                     <li>
-                        <a href="../it/index.html">Italian</a>
+                        <a href="/helloworld/it/index.html">Italian</a>
                     </li>
                 </ul>
             </div>
@@ -91,14 +91,15 @@
                 <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Blog Post
-                    <small>by <a href="#">Start Bootstrap</a>
+                <h1 class="page-header">
+                    <small>by <a href="#"></a>
                     </small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html">CoderBot</a>
+                    <li><a href="blog-home-1.html">Blog</a>
                     </li>
-                    <li class="active">Blog Post</li>
+                    <li class="active"></li>
                 </ol>
             </div>
         </div>
@@ -115,7 +116,7 @@
                 <hr>
 
                 <!-- Date/Time -->
-                <p><i class="fa fa-clock-o"></i> Posted on August 24, 2013 at 9:00 PM</p>
+                <p><i class="fa fa-clock-o"></i> Posted on </p>
 
                 <hr>
 
@@ -125,13 +126,9 @@
                 <hr>
 
                 <!-- Post Content -->
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
-                <hr>
+                <p class="lead">
+                </p>
+                                <hr>
 
                 <!-- Blog Comments -->
 
@@ -264,12 +261,6 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
 
 </html>
