--- a/en/index.html
+++ b/en/index.html
@@ -36,6 +36,16 @@
 
   <body>
     <!-- Page Content -->
+    <!-- Header Carousel -->
+    <header id="myCarousel" class="carousel slide" style="height:100%;">
+        <!-- Wrapper for slides -->
+            <div class="item active">
+                <div class="fill" style="background-image:url('../img/home_2.jpg');"></div>
+                <!--div class="carousel-caption">
+                    <h2>CoderBot, a programmable</h2>
+                </div-->
+            </div>
+     </header>
     <div class="container">
 
     <header class="site-header">
@@ -50,34 +60,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/en/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/helloworld/en/about.html">About</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Make</a>
+                        <a href="/helloworld/en/how_to_build_it.html">Make</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Play</a>
+                        <a href="/helloworld/en/prj_fun.html">Play</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Learn</a>
+                        <a href="/helloworld/en/prj_learn.html">Learn</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contacts</a>
+                        <a href="/helloworld/en/contact.html">Contacts</a>
                     </li>
                     <li>
-                        <a href="forum.html">Forum</a>
+                        <a href="/helloworld/en/forum.html">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/en/blog-home-1.html">News</a>
                     </li>
                     <li>
-                        <a href="../it/index.html">Italian</a>
+                        <a href="/helloworld/it/index.html">Italian</a>
                     </li>
                 </ul>
             </div>
@@ -88,41 +98,33 @@
 </header>
 
 
-        	<style>
-	.desc-over {
-	position:absolute; 
-	width:340px;
-	}
-	</style>
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide" style="height:400px;">
-        <!-- Wrapper for slides -->
-            <div class="item active">
-                <div class="fill" style="background-image:url('../img/home_1.jpg');"></div>
-                <div class="carousel-caption">
-                    <!--h2>CoderBot, un robot programmabile orientato alla didattica</h2-->
-                </div>
-            </div>
-     </header-->
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <!-- Marketing Icons Section -->
+                <!-- Marketing Icons Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    CoderBot - Un robot programmabile orientato alla didattica
+                    CoderBot - A programmable robot with educational purpose
                 </h1>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Molto più di un giocattolo</h4>
+                        <h4><i class="fa fa-fw fa-check"></i> Easy to use</h4>
+                        <p class="">Non è necessario essere esperti di elettronica o di informatica per usarlo.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">Impara concetti di logica, programmazione e tanto altro, divertendoti.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.jpg" alt="">
+                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-gift"></i> More than a toy</h4>
+                        <p class="">Impara concetti di logica, programmazione e tanto altro, divertendoti.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/learn.jpg" alt="">
                         <a href="#" class="btn btn-default">Scopri come</a>
                     </div>
                 </div>
@@ -130,24 +132,12 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-folder-open"></i> Libero e Open source</h4>
+                        <h4><i class="fa fa-fw fa-home"></i> Fit for School</h4>
+                    	<p class="">CoderBot si presta all'uso in classe come strumento di apprendimento esperienziale.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
-						<img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                        <a href="#" class="btn btn-default">Scarica i sorgenti</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Facile da usare</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p class="desc-over">Non è necessario essere esperti di elettronica o di informatica per usarlo.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/school.jpg" alt="">
+                        <a href="prj_learn.html" class="btn btn-default">Impara ed insegna</a>
                     </div>
                 </div>
             </div>
@@ -157,12 +147,12 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-home"></i> Adatto alle Scuole</h4>
+                        <h4><i class="fa fa-fw fa-folder-open"></i> Free and Open source</h4>
+                        <p class="">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
                     </div>
                     <div class="panel-body">
-                    	<p class="desc-over">CoderBot si presta all'uso in classe come strumento di apprendimento esperienziale.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                        <a href="prj_learn.html" class="btn btn-default">Impara ed insegna</a>
+						<img class="img-responsive img-portfolio img-hover" src="/helloworld/img/open.jpg" alt="">
+                        <a href="#" class="btn btn-default">Scarica i sorgenti</a>
                     </div>
                 </div>
             </div>
@@ -170,10 +160,10 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gear"></i> Maker friendly</h4>
+                        <p class="">Scarica gli schemi e realizza il tuo coderbot personale a casa o in un makerspace.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">Scarica gli schemi e realizza il tuo coderbot personale a casa o in un makerspace.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/maker.jpg" alt="">
                         <a href="how_to_build_it.html" class="btn btn-default">Costruisci</a>
                     </div>
                 </div>
@@ -181,11 +171,11 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-fullscreen"></i> Estendibile</h4>
+                        <h4><i class="fa fa-fw fa-expand"></i> Extensible</h4>
+                        <p class="desc-over">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/extend.jpg" alt="">
                         <a href="#" class="btn btn-default">Guarda qualche esempio</a>
                     </div>
                 </div>
@@ -195,7 +185,7 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Qualche progetto recente</h2>
+                <h2 class="page-header">Features</h2>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
@@ -229,30 +219,6 @@
             </div>
         </div>
         <!-- /.row -->
-
-        <!-- Features Section>
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">CoderBot Features</h2>
-            </div>
-            <div class="col-md-6">
-                <p>The Modern Business template by Start Bootstrap includes:</p>
-                <ul>
-                    <li><strong>Bootstrap v3.2.0</strong>
-                    </li>
-                    <li>jQuery v1.11.0</li>
-                    <li>Font Awesome v4.1.0</li>
-                    <li>Working PHP contact form with validation</li>
-                    <li>Unstyled page elements for easy customization</li>
-                    <li>17 HTML pages</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-            </div>
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/700x450" alt="">
-            </div>
-        </div>
-        < /.row -->
 
         <hr>
 
@@ -269,7 +235,6 @@
         </div>
 
         <hr>
-    </div>
 
 
 
@@ -285,12 +250,5 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
-
 </html>
