--- a/it/index.html
+++ b/it/index.html
@@ -36,6 +36,16 @@
 
   <body>
     <!-- Page Content -->
+    <!-- Header Carousel -->
+    <header id="myCarousel" class="carousel slide" style="height:100%;">
+        <!-- Wrapper for slides -->
+            <div class="item active">
+                <div class="fill" style="background-image:url('../img/home_2.jpg');"></div>
+                <!--div class="carousel-caption">
+                    <h2>CoderBot, un robot programmabile orientato alla didattica</h2>
+                </div-->
+            </div>
+     </header>
     <div class="container">
 
     <header class="site-header">
@@ -50,34 +60,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">CoderBot</a>
+                <a class="navbar-brand" href="/helloworld/it/index.html">CoderBot</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">Cosa è</a>
+                        <a href="/helloworld/it/about.html">Cosa è</a>
                     </li>
                     <li>
-                        <a href="how_to_build_it.html">Come costruirlo</a>
+                        <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
                     </li>
                     <li>
-                        <a href="prj_fun.html">Gioca</a>
+                        <a href="/helloworld/it/prj_fun.html">Gioca</a>
                     </li>
                     <li>
-                        <a href="prj_learn.html">Impara</a>
+                        <a href="/helloworld/it/prj_learn.html">Impara</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contatti</a>
+                        <a href="/helloworld/it/contact.html">Contatti</a>
                     </li>
                     <li>
                         <a href="https://groups.google.com/forum/#!forum/coderbot-users">Forum</a>
                     </li>
                     <li>
-                        <a href="blog-home-1.html">Blog</a>
+                        <a href="/helloworld/it/blog-home-1.html">Novità</a>
                     </li>
                     <li>
-                        <a href="../en/index.html">English</a>
+                        <a href="/helloworld/en/index.html">English</a>
                     </li>
                 </ul>
             </div>
@@ -88,27 +98,7 @@
 </header>
 
 
-        	<style>
-	.desc-over {
-	position:absolute; 
-	width:340px;
-	}
-	</style>
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide" style="height:400px;">
-        <!-- Wrapper for slides -->
-            <div class="item active">
-                <div class="fill" style="background-image:url('../img/home_1.jpg');"></div>
-                <div class="carousel-caption">
-                    <!--h2>CoderBot, un robot programmabile orientato alla didattica</h2-->
-                </div>
-            </div>
-     </header-->
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <!-- Marketing Icons Section -->
+                <!-- Marketing Icons Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
@@ -118,36 +108,36 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-gift"></i> Molto più di un giocattolo</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p class="desc-over">Impara concetti di logica, programmazione e tanto altro, divertendoti.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                        <a href="#" class="btn btn-default">Scopri come</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-folder-open"></i> Libero e Open source</h4>
-                    </div>
-                    <div class="panel-body">
-                        <p class="desc-over">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
-						<img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                        <a href="#" class="btn btn-default">Scarica i sorgenti</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Facile da usare</h4>
+                        <p class="">Non è necessario essere esperti di elettronica o di informatica per usarlo.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">Non è necessario essere esperti di elettronica o di informatica per usarlo.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.jpg" alt="">
                         <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-gift"></i> Molto più di un giocattolo</h4>
+                        <p class="">Impara concetti di logica, programmazione e tanto altro, divertendoti.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/learn.jpg" alt="">
+                        <a href="#" class="btn btn-default">Impara!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-home"></i> Adatto alle Scuole</h4>
+                    	<p class="">CoderBot si presta all'uso in classe come strumento di apprendimento esperienziale.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/school.jpg" alt="">
+                        <a href="prj_learn.html" class="btn btn-default">Impara ed insegna</a>
                     </div>
                 </div>
             </div>
@@ -157,12 +147,12 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-home"></i> Adatto alle Scuole</h4>
+                        <h4><i class="fa fa-fw fa-folder-open"></i> Libero e Open source</h4>
+                        <p class="">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
                     </div>
                     <div class="panel-body">
-                    	<p class="desc-over">CoderBot si presta all'uso in classe come strumento di apprendimento esperienziale.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                        <a href="prj_learn.html" class="btn btn-default">Impara ed insegna</a>
+						<img class="img-responsive img-portfolio img-hover" src="/helloworld/img/open.jpg" alt="">
+                        <a href="http://github.com/previ/coderbot" class="btn btn-default">Scarica i sorgenti</a>
                     </div>
                 </div>
             </div>
@@ -170,10 +160,10 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gear"></i> Maker friendly</h4>
+                        <p class="">Scarica gli schemi e realizza il tuo coderbot personale a casa o in un makerspace.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">Scarica gli schemi e realizza il tuo coderbot personale a casa o in un makerspace.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/maker.jpg" alt="">
                         <a href="how_to_build_it.html" class="btn btn-default">Costruisci</a>
                     </div>
                 </div>
@@ -182,10 +172,10 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-expand"></i> Estendibile</h4>
+                        <p class="">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
                     </div>
                     <div class="panel-body">
-                        <p class="desc-over">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
-                        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/extend.jpg" alt="">
                         <a href="#" class="btn btn-default">Guarda qualche esempio</a>
                     </div>
                 </div>
@@ -195,7 +185,7 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Qualche progetto recente</h2>
+                <h2 class="page-header">Principali caratteristiche</h2>
             </div>
             <div class="col-md-4 col-sm-6">
                 <a href="portfolio-item.html">
@@ -269,7 +259,6 @@
         </div>
 
         <hr>
-    </div>
 
 
 
@@ -285,12 +274,5 @@
 
     </div>
     <!-- /.container -->
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="../js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
   </body>
-
 </html>
