--- a/it/how_to_build_it.html
+++ b/it/how_to_build_it.html
@@ -23,6 +23,9 @@
     <!-- jQuery Version 1.11.0 -->
     <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
+    <!-- jQuery Version 1.11.0 -->
+    <script src="/helloworld/js/bootstrap.min.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -62,16 +65,13 @@
                         <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
                     </li>
                     <li>
-                        <a href="/helloworld/it/prj_fun.html">Gioca</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/prj_learn.html">Impara</a>
+                        <a href="/helloworld/it/projects.html">Gioca e Impara</a>
                     </li>
                     <li>
                         <a href="/helloworld/it/contact.html">Contatti</a>
                     </li>
                     <li>
-                        <a href="https://groups.google.com/forum/#!forum/coderbot-users">Forum</a>
+                        <a href="https://groups.google.com/forum/#!forum/coderbot-users" target="new">Forum</a>
                     </li>
                     <li>
                         <a href="/helloworld/it/blog-home-1.html">Novità</a>
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="how_to_build_mh.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive img-hover" src="../img/build_mh.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="how_to_build_hw.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive img-hover" src="../img/build_hw.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
@@ -141,11 +141,11 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="how_to_build_sw.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive img-hover" src="../img/build_sw.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <a class="" href="how_to_build_sw.html"><h3>Software</h3></<>
+                <a class="" href="how_to_build_sw.html"><h3>Software</h3></a>
                 <h4>La parte software di CoderBot è composta da diverse librerie e moduli, ecco come installare il tutto.</h4>
                 <p>Puoi partire da una distribuzione Raspbian standard e installare le singole componenti, oppure scaricare un'immagine completa già configurata.</p>
             </div>
