--- a/it/how_to_build_sw.html
+++ b/it/how_to_build_sw.html
@@ -23,6 +23,9 @@
     <!-- jQuery Version 1.11.0 -->
     <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
+    <!-- jQuery Version 1.11.0 -->
+    <script src="/helloworld/js/bootstrap.min.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -62,16 +65,13 @@
                         <a href="/helloworld/it/how_to_build_it.html">Come costruirlo</a>
                     </li>
                     <li>
-                        <a href="/helloworld/it/prj_fun.html">Gioca</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/it/prj_learn.html">Impara</a>
+                        <a href="/helloworld/it/projects.html">Gioca e Impara</a>
                     </li>
                     <li>
                         <a href="/helloworld/it/contact.html">Contatti</a>
                     </li>
                     <li>
-                        <a href="https://groups.google.com/forum/#!forum/coderbot-users">Forum</a>
+                        <a href="https://groups.google.com/forum/#!forum/coderbot-users" target="new">Forum</a>
                     </li>
                     <li>
                         <a href="/helloworld/it/blog-home-1.html">Novità</a>
@@ -96,7 +96,7 @@
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">CoderBot</a></li>
-                    <li><a href="prj_fun.html">Come costruirlo</a></li>
+                    <li><a href="how_to_build_it.html">Come costruirlo</a></li>
                     <li class="active">Software</li>
                 </ol>
             </div>
@@ -111,7 +111,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="http://placehold.it/1140x300" alt="">
+                            <img class="img-responsive" src="../img/build_sw.jpg" alt="">
                         </div>
                     </div>
                 </div>
