--- a/en/index.html
+++ b/en/index.html
@@ -23,6 +23,9 @@
     <!-- jQuery Version 1.11.0 -->
     <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
+    <!-- jQuery Version 1.11.0 -->
+    <script src="/helloworld/js/bootstrap.min.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -72,16 +75,13 @@
                         <a href="/helloworld/en/how_to_build_it.html">Make</a>
                     </li>
                     <li>
-                        <a href="/helloworld/en/prj_fun.html">Play</a>
-                    </li>
-                    <li>
-                        <a href="/helloworld/en/prj_learn.html">Learn</a>
+                        <a href="/helloworld/en/projects.html">Play & Learn</a>
                     </li>
                     <li>
                         <a href="/helloworld/en/contact.html">Contacts</a>
                     </li>
                     <li>
-                        <a href="/helloworld/en/forum.html">Forum</a>
+                        <a href="https://groups.google.com/forum/#!forum/coderbot-users" target="new">Forum</a>
                     </li>
                     <li>
                         <a href="/helloworld/en/blog-home-1.html">News</a>
@@ -109,11 +109,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Easy to use</h4>
-                        <p class="">Non è necessario essere esperti di elettronica o di informatica per usarlo.</p>
+                        <p class="">No need to be an expert in Information Technology or Electronics to be able to use it.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.jpg" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                        <a href="prj_fun.html" class="btn btn-default">Play!</a>
                     </div>
                 </div>
             </div>
@@ -121,11 +121,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gift"></i> More than a toy</h4>
-                        <p class="">Impara concetti di logica, programmazione e tanto altro, divertendoti.</p>
+                        <p class="">Learn logic, coding skills and much more, having fun.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/learn.jpg" alt="">
-                        <a href="#" class="btn btn-default">Scopri come</a>
+                        <a href="#" class="btn btn-default">Discover projects</a>
                     </div>
                 </div>
             </div>
@@ -133,11 +133,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-home"></i> Fit for School</h4>
-                    	<p class="">CoderBot si presta all'uso in classe come strumento di apprendimento esperienziale.</p>
+                    	<p class="">CoderBot is suited for use in the classroom.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/school.jpg" alt="">
-                        <a href="prj_learn.html" class="btn btn-default">Impara ed insegna</a>
+                        <a href="prj_learn.html" class="btn btn-default">Discover projects</a>
                     </div>
                 </div>
             </div>
@@ -148,11 +148,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-folder-open"></i> Free and Open source</h4>
-                        <p class="">CoderBot è un progetto aperto, sia le componenti software che hardware.</p>
+                        <p class="">CoderBot is an open source and hardware projects.</p>
                     </div>
                     <div class="panel-body">
 						<img class="img-responsive img-portfolio img-hover" src="/helloworld/img/open.jpg" alt="">
-                        <a href="#" class="btn btn-default">Scarica i sorgenti</a>
+                        <a href="#" class="btn btn-default">Download the source</a>
                     </div>
                 </div>
             </div>
@@ -160,11 +160,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gear"></i> Maker friendly</h4>
-                        <p class="">Scarica gli schemi e realizza il tuo coderbot personale a casa o in un makerspace.</p>
+                        <p class="">Download the schematics and build your very own CoderBot in a FabLab or Makerspace.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/maker.jpg" alt="">
-                        <a href="how_to_build_it.html" class="btn btn-default">Costruisci</a>
+                        <a href="how_to_build_it.html" class="btn btn-default">Make it</a>
                     </div>
                 </div>
             </div>
@@ -172,11 +172,11 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-expand"></i> Extensible</h4>
-                        <p class="desc-over">Modifica, elabora, estendi il progetto in tutti i modi che ti vengono in mente.</p>
+                        <p class="desc-over">Modify, hack, extend CoderBot.</p>
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/extend.jpg" alt="">
-                        <a href="#" class="btn btn-default">Guarda qualche esempio</a>
+                        <a href="#" class="btn btn-default">Discover examples</a>
                     </div>
                 </div>
             </div>
@@ -185,37 +185,55 @@
         <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Features</h2>
+                <h2 class="page-header">Principali caratteristiche</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-check"></i> Controllabile via computer, tablet, smartphone</h4>
+                        <p class="">CoderBot si controlla tramite un comune browser connesso al bot via wifi, non è necessario installare software.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/wifi.png" alt="">
+                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-check"></i> Coding? Un gioco da bambini</h4>
+                        <p class="">L'interfaccia di programmazione presenta livelli di complessità crescenti, adatta dai 6 anni in avanti.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.png" alt="">
+                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-check"></i> Un robot che guarda</h4>
+                        <p class="">La telecamera permette il riconoscimento di oggetti, ostacoli, percorsi, simboli per sviluppare progetti e giochi complessi.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/eye.png" alt="">
+                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4><i class="fa fa-fw fa-check"></i> Sintesi vocale e suoni</h4>
+                        <p class="">CoderBot può usare l'altoparlante per comunicare: emettendo suoni o, grazie alla sintesi vocale, frasi definite dal programma.</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/speak.png" alt="">
+                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /.row -->
@@ -225,12 +243,50 @@
         <!-- Call to Action Section -->
         <div class="well">
             <div class="row">
-                <div class="col-md-8">
-                    <p>CoderBot è un progetto in continuo aggiornamento, molte novità sono in arrivo, resta aggiornato iscrivendoti alla mailing list.</p>
+                <div class="col-md-6">
+                    <p>Follow CoderBot on:</p>
+					<ul class="list-unstyled list-inline list-social-icons">
+						<li>
+							<a href="http://www.facebook.com/coderbot" target="new"><i class="fa fa-facebook-square fa-2x"></i></a>
+						</li>
+						<li>
+							<a href="http://twitter.com/coderbotorg" target="new"><i class="fa fa-twitter-square fa-2x"></i></a>
+						</li>
+						<li>
+							<a href="https://plus.google.com/u/0/b/100258377718556176811/100258377718556176811/posts" target="new"><i class="fa fa-google-plus-square fa-2x"></i></a>
+						</li>
+						<li>
+							<a href="https://www.youtube.com/channel/UCw7SHwErtQadw4Gafe1xPVg" target="new"><i class="fa fa-youtube-square fa-2x"></i></a>
+						</li>
+					</ul>                  
                 </div>
-                <div class="col-md-4">
-                    <a class="btn btn-lg btn-default btn-block" href="#">Iscriviti!</a>
-                </div>
+                <div class="col-md-6">
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<h4>Subscribe to the mailing list:</h4>
+<div id="mc_embed_signup">
+<form action="//coderbot.us5.list-manage.com/subscribe/post?u=cd67d0404c1f812709dc2a8c8&amp;id=bd16dab715" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+<div class="mc-field-group">
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_cd67d0404c1f812709dc2a8c8_bd16dab715" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->                
+</div>
             </div>
         </div>
 
