--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <!-- jQuery Version 1.11.0 -->
     <script src="/helloworld/js/jquery-1.11.0.js"></script>
 
+    <!-- jQuery Version 1.11.0 -->
+    <script src="/helloworld/js/bootstrap.min.js"></script>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
