--- a/en/index.html
+++ b/en/index.html
@@ -15,7 +15,7 @@
     <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/coderbot.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -206,7 +206,7 @@
                         <p class="">L'interfaccia di programmazione presenta livelli di complessità crescenti, adatta dai 6 anni in avanti.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.png" alt="">
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/coding.png" alt="">
                         <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
@@ -298,7 +298,7 @@
 <footer class="site-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; coderbot.org 2014</p>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work by <a xmlns:cc="http://creativecommons.org/ns#" href="http://coderbot.org" property="cc:attributionName" rel="cc:attributionURL">CoderBot</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
                 </div>
             </div>
 </footer>
