--- a/it/how_to_build_hw.html
+++ b/it/how_to_build_hw.html
@@ -15,7 +15,7 @@
     <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/coderbot.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -123,14 +123,7 @@
         <div class="row">
 
             <div class="col-md-12">
-            	<h2>Elenco delle componenti</h2>
-            	<ul>
-            		<li>1 Raspberry PI - Model B o Model B+</li>
-            		<li>1 Raspberry Camera module</li>
-            		<li>1 Scheda di controllo motori</li>
-            		<li>1 Batteria</li>
-            		<li>2 Cavi USB</li>
-            	</ul>
+            	<p>Questa sezione descrive tutte le componenti Hardware necessarie per realizzare CoderBot.</p>
                 <h3>Raspberry PI</h3>
                 <p>CoderBot utilizza Raspberry Pi come controller principale, sono adatti il Model B e il recente B+, quest'ultimo preferibile per i ridotti consumi.</p>
                 <p>Il Model A può essere utilizzato per realizzare un robot "cieco", infatti per gestire la Camera, e soprattutto il riconoscimento degli oggetti, sono necessari circa 384MB (il Model B ne ha 512, il Model A si ferma a 256MB).</p>
@@ -143,6 +136,53 @@
 				E' possibile in alternativa utilizzare due batterie più piccole indipendenti a condizione  che la corrente in uscita sia di almeno 1A su 5V</p>
                 <h3>Cavi USB</h3>
                 <p>Due cavi USB-A - USB-Micro (maschio-maschio) per collegare l'output della batteria a Raspberry e alla Scheda di controllo motori</p>
+            	<h2>Elenco delle componenti</h2>
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Componente</th>
+                <th>Quantità</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Raspberry PI - Model B oppure Model B+</td>
+                <td>1</td>
+                <td>link</td>
+				</tr>
+                <tr>
+                <td>Raspberry PI Camera module</td>
+                <td>1</td>
+                <td>link</td>
+				</tr>
+                <tr>
+                <td>Wi-Fi</td>
+                <td>1</td>
+                <td>link</td>
+				</tr>
+                <tr>
+                <td>SD card 8GB</td>
+                <td>1</td>
+                <td>link</td>
+				</tr>
+                <tr>
+                <td>Scheda controllo motori DC oppure servo</td>
+                <td>1</td>
+                <td>link</td>
+				</tr>
+                <tr>
+                <td>Batteria</td>
+                <td>1</td>
+                <td>link</td>
+				</tr>
+                <tr>
+                <td>Cavo USB-A - USB micro</td>
+                <td>2</td>
+                <td>link</td>
+				</tr>
+				</tbody>
+				</table>            	
             </div>
 
         </div>
@@ -153,7 +193,7 @@
 <footer class="site-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; coderbot.org 2014</p>
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Quest'opera di <a xmlns:cc="http://creativecommons.org/ns#" href="http://coderbot.org" property="cc:attributionName" rel="cc:attributionURL">CoderBot.org</a> è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
                 </div>
             </div>
 </footer>
