--- a/it/how_to_build_mh.html
+++ b/it/how_to_build_mh.html
@@ -15,7 +15,7 @@
     <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/coderbot.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -122,10 +122,10 @@
         <!-- Related Projects Row -->
         <div class="row">
             <div class="col-md-12">
-            	<h3>Versioni del telaio</h3>
+				<p>Questa sezione descrive tutte le componenti necessarie a costruire un CoderBot, ad esclusione delle <a href="how_to_build_hw.html">componenti Hardware</a></p>
+            	<h3>Telaio</h3>
 				<p>Il telaio di CoderBot è realizzato in vari materiali: legno, acrilico (plexiglass), cartone corrugato.</p>
 				<p>Per ogni materiale è disponibile un disegno (SVG) adatto ad essere inviato a un servizio di taglio laser per ottenere i pezzi pronti per essere assemblati.</p>
-				<p>E' sconsigliabile tagliare il materiale a mano, perché gli incastri sono molto precisi e difficile da riprodurre senza una macchina CNC.</p> 
             	<ul>
             		<li>Telaio acrilico - spessore 3mm - motori dc</li>
             		<li>Telaio legno - spessore 3mm - motori dc</li>
@@ -139,9 +139,288 @@
                 <p>Si consiglia di utilizzare una sfera come questa come terzo punto di appoggio.</p>
                 <h3>Bulloneria varia</h3>
                 <p>Viti M3x20 e relativi dadi, M3x10 e M2x10 per fissare la camera nel caso di telaio in acrilico.</p>
-                <h3></h3>
-            </div>
-
+                <h3>Elenco materiali</h3>
+                <p>Di seguito sono elencati i componenti e relative quantità necessari per i vari tipi di telaio.</p>
+                <hr>
+                <h4>Telaio acrilico (plexiglass), motori DC</h4>
+                <p>Questo telaio è realizzato in materiale plastico acrilico (il plexiglas), può essere di vari colori o trasparente.</p>
+                <p>Nella versione trasparente, lascia visibili tutte le componenti meccaniche ed elettroniche, il principale svantaggio di questo materiale è la fragilità: in caso di caduta del bot da altezze maggiori di una decina di centimetri, preparatevi a vederlo andare in pezzi come vetro.</p>
+                <p>E' pensato per l'uso di motori DC ma è adattabile all'uso di servo sbloccati (360°)</p>
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Componente</th>
+                <th>Quantità</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Telaio acrilico (plexyglass 3mm)</td>
+                <td>1</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Motori DC</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Ruote</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Ruota libera</td>
+                <td>1</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 10mm</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 30mm</td>
+                <td>7</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 5mm</td>
+                <td>4</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x5</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x10</td>
+                <td>7</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M2x10</td>
+                <td>4</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                </tbody>
+                </table>
+                <h4>Assemblaggio</h4>
+				<ol>
+				  <li>Fissare i motori al telaio</li>
+				  <li>Fissare le ruote ai motori</li>
+				  <li>Fissare la ruota libera al telaio</li>
+				  <li>Fissare la scheda di controllo a Raspberry PI</li>
+				  <li>Collegare la scheda SD a Raspberry PI</li>
+				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
+				  <li>Fissare la scheda Raspberry PI al telaio</li>
+				  <li>Fissare i due distanziali da 3mm maschio-femmina al telaio</li>
+				  <li>Fissare la camera al proprio supporto, completare il supporto con la protezione anteriore</li>
+				  <li>Fissare il traliccio anteriore e il logo CoderBot al telaio</li>
+				  <li>Fissare Raspberry PI al telaio</li>
+				  <li>Fissare la camera e il proprio supporto al traliccio</li>
+				  <li>Collegare la camera a Raspberry</li>
+				  <li>Collegare i motori alla scheda di controllo</li>
+				  <li>Fissare il "kill switch" al tetto</li>
+				  <li>Collegare collegare il "kill swith" alla scheda di controllo</li>
+				  <li>Fissare il tetto</li>
+				  <li>Collegare l'altoparlante a Raspberry</li>
+				  <li>Inserire la batteria nell'alloggiamento</li>
+				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				</ol>
+                <hr>
+                <h4>Telaio cartone corrugato (6mm), motori dc</h4>
+                <p>Questo telaio è realizzato in cartone corrugato dello spezzore di 6mm.</p>
+                <p>Il principale vantaggio di questo materiale è l'economicità, inoltre è possibile decorarlo con pennarelli o tempera.</p>
+                <p>Grazie all'uso prevalente di incastri e biadesivo come collegamenti, è assemblabile in pochi minuti, anche da bambini.</p>
+                <p>Resiste bene agli urti mentre col tempo tende a piegarsi e perdere le caratteristiche meccaniche.</p>
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Componente</th>
+                <th>Quantità</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Telaio cartone corrugato (6mm)</td>
+                <td>1</td>
+                <td><a href="https://drive.google.com/file/d/0B0WH-R3RUJc9VFI3VFducTNjYjQ/view?usp=sharing" target="new">stencil per laser</a></td>
+                </tr>
+                <tr>
+                <td>Motori DC</td>
+                <td>2</td>
+                <td><a href="http://microcontrollershop.com/product_info.php?cPath=315&products_id=5832" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Ruote</td>
+                <td>2</td>
+                <td><a href="http://microcontrollershop.com/product_info.php?products_id=5833" target="new">link</a></td>
+                </tr>
+                <tr>
+                <td>Ruota libera</td>
+                <td>1</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 30mm maschio-femmina</td>
+                <td>3</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 40mm maschio-femmina</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 30mm femmina-femmina</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 5mm</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x30</td>
+                <td>4</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x5</td>
+                <td>3</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x10</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Dadi M3</td>
+                <td>9</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Rondelle M3</td>
+                <td>6</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                </tbody>
+                </table>          
+                <h4>Assemblaggio</h4>
+				<ol>
+				  <li>Montare le pareti laterali e il logo CoderBot al telaio</li>
+				  <li>Fissare le ruote ai motori</li>
+				  <li>Fissare i motori al telaio con il biadesivo</li>
+				  <li>Fissare la ruota libera al telaio</li>
+				  <li>Fissare la scheda di controllo a Raspberry PI</li>
+				  <li>Collegare la scheda SD a Raspberry PI</li>
+				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
+				  <li>Fissare la scheda Raspberry PI al telaio</li>
+				  <li>Fissare la camera al proprio supporto</li>
+				  <li>Fissare Raspberry PI al telaio</li>
+				  <li>Fissare la camera e il proprio supporto al traliccio</li>
+				  <li>Collegare la camera a Raspberry</li>
+				  <li>Collegare i motori alla scheda di controllo</li>
+				  <li>Fissare il "kill switch" alla parete</li>
+				  <li>Collegare il "kill swith" alla scheda di controllo</li>
+				  <li>Inserire la batteria nell'alloggiamento</li>
+				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				</ol>
+                <hr>
+                <h4>Telaio legno, motori servo</h4>
+                <p>Questo telaio è realizzato in legno compensato (pioppo o legni più rigidi) di spessore 3mm.</p>
+                <p>Ottimo compromesso tra robustezza, economicità e durata nel tempo, si presta anch'esso a essere colorato.</p>
+                <p>Grazie all'uso prevalente di incastri come collegamenti, è assemblabile in pochi minuti.</p>
+                <p>Resiste bene agli urti e può essere smontato e rimontato svariate volte.</p>
+                <p>E' progettato per l'uso di motori servo, come ruote si possono utilizzare direttamente quelle fornite con il servo, è però necessario rivestirle di gomma per aumentare la presa su superfici lisce.</p>                
+                <table class="table">
+                <thead>
+                <tr>
+                <th>Componente</th>
+                <th>Quantità</th>
+                <th>link</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                <td>Telaio legno (compensato 3mm)</td>
+                <td>1</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Motori servo</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Ruota libera</td>
+                <td>1</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 10mm</td>
+                <td>3</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Distanziali 5mm</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x30</td>
+                <td>4</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x5</td>
+                <td>3</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Viti M3x10</td>
+                <td>2</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Dadi M3</td>
+                <td>9</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                <tr>
+                <td>Biadesivo</td>
+                <td>10cm</td>
+                <td><a href="http://shop.com">link</a></td>
+                </tr>
+                </tbody>
+                </table>
+                <hr>
+                <h4>Assemblaggio</h4>
+				<ol>
+				  <li>Montare le pareti laterali e il logo CoderBot al telaio</li>
+				  <li>Fissare i motori al telaio</li>
+				  <li>Fissare la ruota libera al telaio</li>
+				  <li>Fissare la scheda di controllo a Raspberry PI</li>
+				  <li>Collegare la scheda SD a Raspberry PI</li>
+				  <li>Collegare la scheda wi-fi a Raspberry PI</li>
+				  <li>Fissare la scheda Raspberry PI al telaio</li>
+				  <li>Fissare la camera al proprio supporto</li>
+				  <li>Fissare Raspberry PI al telaio</li>
+				  <li>Fissare la camera e il proprio supporto al traliccio</li>
+				  <li>Collegare la camera a Raspberry</li>
+				  <li>Collegare i motori alla scheda di controllo</li>
+				  <li>Fissare il "kill switch" alla parete</li>
+				  <li>Collegare il "kill swith" alla scheda di controllo</li>
+				  <li>Inserire la batteria nell'alloggiamento</li>
+				  <li>Collegare la batteria a raspberry e scheda di controllo</li>
+				</ol>
+           </div>
         </div>
         <!-- /.row -->
 
@@ -150,7 +429,7 @@
 <footer class="site-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; coderbot.org 2014</p>
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Quest'opera di <a xmlns:cc="http://creativecommons.org/ns#" href="http://coderbot.org" property="cc:attributionName" rel="cc:attributionURL">CoderBot.org</a> è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
                 </div>
             </div>
 </footer>
