--- a/it/index.html
+++ b/it/index.html
@@ -15,7 +15,7 @@
     <link href="/helloworld/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/helloworld/css/modern-business.css" rel="stylesheet">
+    <link href="/helloworld/css/coderbot.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/helloworld/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -106,6 +106,7 @@
                 </h1>
             </div>
             <div class="col-md-4">
+            	<a class="jumbo" href="projects.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Facile da usare</h4>
@@ -113,11 +114,12 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.jpg" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="projects.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gift"></i> Molto più di un giocattolo</h4>
@@ -125,11 +127,12 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/learn.jpg" alt="">
-                        <a href="#" class="btn btn-default">Impara!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+            	<a class="jumbo" href="projects.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-home"></i> Adatto alle Scuole</h4>
@@ -137,14 +140,15 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/school.jpg" alt="">
-                        <a href="prj_learn.html" class="btn btn-default">Impara ed insegna</a>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <!-- /.row -->
         <div class="row">
             <div class="col-md-4">
+                <a class="jumbo" href="http://github.com/previ/coderbot" target="new">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-folder-open"></i> Libero e Open source</h4>
@@ -152,11 +156,12 @@
                     </div>
                     <div class="panel-body">
 						<img class="img-responsive img-portfolio img-hover" src="/helloworld/img/open.jpg" alt="">
-                        <a href="http://github.com/previ/coderbot" class="btn btn-default">Scarica i sorgenti</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="how_to_build_mh.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gear"></i> Maker friendly</h4>
@@ -164,11 +169,12 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/maker.jpg" alt="">
-                        <a href="how_to_build_it.html" class="btn btn-default">Costruisci</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-4">
+                <a class="jumbo" href="how_to_build_mh.html">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-expand"></i> Estendibile</h4>
@@ -176,9 +182,9 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/extend.jpg" alt="">
-                        <a href="#" class="btn btn-default">Guarda qualche esempio</a>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
 
@@ -188,6 +194,7 @@
                 <h2 class="page-header">Principali caratteristiche</h2>
             </div>
             <div class="col-md-6">
+            	<a class="jumbo" href="about.html#wifi">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Controllabile via computer, tablet, smartphone</h4>
@@ -195,23 +202,25 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/wifi.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-6">
+                <a class="jumbo" href="about.html#programming">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Coding? Un gioco da bambini</h4>
                         <p class="">L'interfaccia di programmazione presenta livelli di complessità crescenti, adatta dai 6 anni in avanti.</p>
                     </div>
                     <div class="panel-body">
-                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/easy.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
+                        <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/coding.png" alt="">
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-6">
+                <a class="jumbo" href="about.html#cv">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Un robot che guarda</h4>
@@ -219,11 +228,12 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/eye.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-md-6">
+                <a class="jumbo" href="about.html#audio">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-check"></i> Sintesi vocale e suoni</h4>
@@ -231,9 +241,9 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-responsive img-portfolio img-hover" src="/helloworld/img/speak.png" alt="">
-                        <a href="prj_fun.html" class="btn btn-default">Gioca!</a>
                     </div>
                 </div>
+                </a>
             </div>
         </div>
         <!-- /.row -->
@@ -321,7 +331,7 @@
 <footer class="site-footer">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; coderbot.org 2014</p>
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Quest'opera di <a xmlns:cc="http://creativecommons.org/ns#" href="http://coderbot.org" property="cc:attributionName" rel="cc:attributionURL">CoderBot.org</a> è distribuita con Licenza <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribuzione - Condividi allo stesso modo 4.0 Internazionale</a>.
                 </div>
             </div>
 </footer>
